Add ellipse drawing

--- a/Lab1/Console Paint App/Console Paint App.vcxproj.filters
+++ b/Lab1/Console Paint App/Console Paint App.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="Figures\Figures.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Utils\ParamsValidator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Utils\UnitTesting.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer\Renderer.h">
@@ -45,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Figures\Ellipse.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils\ParamsValidator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
