--- a/Lab1/Console Paint App/Console Paint App.vcxproj
+++ b/Lab1/Console Paint App/Console Paint App.vcxproj
@@ -102,7 +102,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WITH_UNIT_TESTING=0;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -132,6 +132,8 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu\Menu.cpp" />
     <ClCompile Include="Renderer\Renderer.cpp" />
+    <ClCompile Include="Utils\ParamsValidator.cpp" />
+    <ClCompile Include="Utils\UnitTesting.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Canvas\Canvas.h" />
@@ -139,6 +141,7 @@
     <ClInclude Include="Figures\IFigure.h" />
     <ClInclude Include="Menu\Menu.h" />
     <ClInclude Include="Renderer\Renderer.h" />
+    <ClInclude Include="Utils\ParamsValidator.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
