--- a/Lab1/Console Paint App/Console Paint App.vcxproj
+++ b/Lab1/Console Paint App/Console Paint App.vcxproj
@@ -102,7 +102,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WITH_UNIT_TESTING=1;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WITH_UNIT_TESTING=0;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -139,6 +139,7 @@
     <ClInclude Include="Canvas\Canvas.h" />
     <ClInclude Include="Figures\Ellipse.h" />
     <ClInclude Include="Figures\IFigure.h" />
+    <ClInclude Include="Figures\Rect.h" />
     <ClInclude Include="Menu\Menu.h" />
     <ClInclude Include="Renderer\Renderer.h" />
     <ClInclude Include="Utils\ParamsValidator.h" />
