--- a/Lab1/Console Paint App/Console Paint App.vcxproj.filters
+++ b/Lab1/Console Paint App/Console Paint App.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClInclude Include="Figures\Rect.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Figures\Triangle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
