Add document class

--- a/Lab2/Console-based document editor/Console-based document editor/Console-based document editor.vcxproj.filters
+++ b/Lab2/Console-based document editor/Console-based document editor/Console-based document editor.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Editor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Document.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Auth\User.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Auth\AuthManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Document.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
