--- a/Lab2/Console-based document editor/Console-based document editor/Console-based document editor.vcxproj
+++ b/Lab2/Console-based document editor/Console-based document editor/Console-based document editor.vcxproj
@@ -130,11 +130,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Auth\Auth.cpp" />
+    <ClCompile Include="Document.cpp" />
     <ClCompile Include="Editor.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Auth\AuthManager.h" />
+    <ClInclude Include="Document.h" />
     <ClInclude Include="Editor.h" />
     <ClInclude Include="Auth\User.h" />
   </ItemGroup>
