--- a/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj
+++ b/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj
@@ -129,9 +129,14 @@
   <ItemGroup>
     <ClCompile Include="ConsoleDocEditorApp.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="User\User.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleDocEditorApp.h" />
+    <ClInclude Include="User\IUser.h" />
+    <ClInclude Include="User\IUserRepo.h" />
+    <ClInclude Include="User\LocalStorageUserRepo.h" />
+    <ClInclude Include="User\User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
