Add admin class

--- a/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj.filters
+++ b/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="User\User.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="User\Admin.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
