--- a/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj
+++ b/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleDocEditorApp.h" />
+    <ClInclude Include="User\Admin.h" />
     <ClInclude Include="User\IUser.h" />
     <ClInclude Include="User\IUserRepo.h" />
     <ClInclude Include="User\LocalStorageUserRepo.h" />
