--- a/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj.filters
+++ b/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="User\Admin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Document\IPermissionOpener.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
