--- a/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj
+++ b/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj
@@ -128,12 +128,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ConsoleDocEditorApp.cpp" />
+    <ClCompile Include="Document\Document.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="User\User.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleDocEditorApp.h" />
+    <ClInclude Include="Document\EditPermissionOpener.h" />
     <ClInclude Include="Document\IPermissionOpener.h" />
+    <ClInclude Include="Document\ViewPermissionOpener.h" />
     <ClInclude Include="User\Admin.h" />
     <ClInclude Include="User\IUser.h" />
     <ClInclude Include="User\IUserRepo.h" />
