Add TXT Importer patern

--- a/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj
+++ b/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj
@@ -131,6 +131,7 @@
   <ItemGroup>
     <ClCompile Include="ConsoleDocEditorApp.cpp" />
     <ClCompile Include="Document\Document.cpp" />
+    <ClCompile Include="Document\Import\Import.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="User\User.cpp" />
   </ItemGroup>
@@ -139,6 +140,9 @@
     <ClInclude Include="Document\Content.h" />
     <ClInclude Include="Document\Document.h" />
     <ClInclude Include="Document\EditPermissionOpener.h" />
+    <ClInclude Include="Document\Import\IContentImporter.h" />
+    <ClInclude Include="Document\Import\TXTImporter.h" />
+    <ClInclude Include="Document\Import\TXTImporterAdapter.h" />
     <ClInclude Include="Document\IPermissionOpener.h" />
     <ClInclude Include="Document\ViewPermissionOpener.h" />
     <ClInclude Include="User\Admin.h" />
