--- a/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj.filters
+++ b/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="File\FileDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Document\Content\Content.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleDocEditorApp.h">
@@ -54,9 +57,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Document\Document.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Document\Content.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Document\Import\IContentImporter.h">
@@ -81,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Saver\ISaverStrategy.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Document\Content\Content.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
