Add export logic

--- a/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj
+++ b/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="ConsoleDocEditorApp.cpp" />
     <ClCompile Include="Document\Content\Content.cpp" />
     <ClCompile Include="Document\Document.cpp" />
+    <ClCompile Include="Document\Export\Exporters.cpp" />
     <ClCompile Include="Document\Import\Import.cpp" />
     <ClCompile Include="File\FileDialog.cpp" />
     <ClCompile Include="main.cpp" />
@@ -144,6 +145,9 @@
     <ClInclude Include="Document\Command\ICommand.h" />
     <ClInclude Include="Document\Content\Content.h" />
     <ClInclude Include="Document\Document.h" />
+    <ClInclude Include="Document\Export\Exporters.h" />
+    <ClInclude Include="Document\Export\IExporter.h" />
+    <ClInclude Include="Document\Export\IExportFactory.h" />
     <ClInclude Include="Document\Import\IContentImporter.h" />
     <ClInclude Include="Document\Import\TXTImporter.h" />
     <ClInclude Include="Document\Import\TXTImporterAdapter.h" />
