--- a/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj.filters
+++ b/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Document\Export\Exporters.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Document\Command\AddCharCommand.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleDocEditorApp.h">
@@ -77,9 +80,6 @@
     <ClInclude Include="Document\Command\AddCharCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Document\Command\DeleteCommand.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="File\FileDialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -96,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Document\Export\Exporters.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Document\HistoryManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
