--- a/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj.filters
+++ b/Lab2/console_text_editor/console_text_editor/console_text_editor.vcxproj.filters
@@ -110,5 +110,8 @@
     <ClInclude Include="Document\Content\Decorator\Decorator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Document\Command\DecCommands.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
